--- a/helm/petclinic/templates/petclinic-mem-hpa.yaml
+++ b/helm/petclinic/templates/petclinic-mem-hpa.yaml
@@ -2,7 +2,11 @@ apiVersion: autoscaling/v2beta2
 kind: HorizontalPodAutoscaler
 metadata:
   name: petclinic-mem-hpa
+  labels:
+    app: petclinic-app
 spec:
+ selector:
+    app: petclinic-app
   maxReplicas: 5
   minReplicas: 1
   scaleTargetRef:
